# crisp

./: .gitignore  LICENSE  README.md  cabal.project  crisp.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
app/Crisp/CLI/: Commands.hs  Options.hs
docs/: IMPLEMENTATION_PLAN.md  SPECIFICATION.md  TESTING.md  TUTORIAL.md
examples/: authorization.crisp  hello.crisp  safe_list.crisp  state_handler.crisp
src/Crisp/Codegen/: Compile.hs  Wasm.hs  WasmBinary.hs
src/Crisp/Core/: Desugar.hs  PatternCompiler.hs  Term.hs
src/Crisp/Doc/: Generate.hs
src/Crisp/Effects/: Handler.hs  Polymorphism.hs  Row.hs  Typing.hs
src/Crisp/FFI/: Http.hs  Time.hs
src/Crisp/Formatter/: Format.hs
src/Crisp/IR/: CPS.hs  ENIR.hs  LLIR.hs  Layout.hs  Monomorphize.hs  TypedIR.hs
src/Crisp/LSP/: Server.hs
src/Crisp/Lexer/: Error.hs  Layout.hs  Lexer.hs  Token.hs
src/Crisp/Manifest/: Generate.hs  Hash.hs  Types.hs
src/Crisp/Module/: Import.hs  Interface.hs  Types.hs
src/Crisp/Parser/: Parser.hs
src/Crisp/Prelude/: Core.hs  Effects.hs  Functions.hs  Numeric.hs  Types.hs
src/Crisp/REPL/: Commands.hs  Eval.hs  Input.hs  Types.hs
src/Crisp/Runtime/: Allocator.hs
src/Crisp/Syntax/: Span.hs  Surface.hs
src/Crisp/Types/: Checker.hs  Constructor.hs  Context.hs  Dependent.hs  Derive.hs  Exhaustive.hs  GADT.hs  Infer.hs  KindChecker.hs  Linear.hs  Prop.hs  Scheme.hs  Substitution.hs  Unify.hs  Usage.hs
test/: Main.hs
test/Crisp/Codegen/: CompileSpec.hs  WasmBinarySpec.hs  WasmSpec.hs
test/Crisp/Core/: DesugarSpec.hs  PatternSpec.hs
test/Crisp/Doc/: GenerateSpec.hs
test/Crisp/Effects/: HandlerSpec.hs  PolymorphismSpec.hs  TypingSpec.hs
test/Crisp/FFI/: ExternalSpec.hs  HttpSpec.hs  TimeSpec.hs
test/Crisp/Formatter/: FormatSpec.hs
test/Crisp/IR/: CPSSpec.hs  ENIRSpec.hs  LLIRSpec.hs
test/Crisp/LSP/: ServerSpec.hs
test/Crisp/Lexer/: ErrorSpec.hs  LexerSpec.hs
test/Crisp/Manifest/: ManifestSpec.hs
test/Crisp/Module/: ModuleSpec.hs
test/Crisp/Parser/: ParserSpec.hs
test/Crisp/Prelude/: NumericSpec.hs  PreludeSpec.hs
test/Crisp/REPL/: ReplSpec.hs
test/Crisp/Runtime/: AllocatorSpec.hs
test/Crisp/Types/: BoundedPolySpec.hs  CheckerSpec.hs  ConstructorSpec.hs  DependentSpec.hs  DeriveSpec.hs  ExhaustiveSpec.hs  GADTSpec.hs  InferSpec.hs  KindSpec.hs  LinearSpec.hs  PropSpec.hs  RefinementSpec.hs  TraitSpec.hs  TypeAliasSpec.hs  UnifySpec.hs
